[project]
name = "wlc"
version = "0.1.0"
authors = [
  { name="Francisco J. Palmero Moya", email="franciscopalmeromoya@gmail.com" },
]
description = "Estimating the main parameters of a Worm-Like Chain Molecule from Force-Extension Measurements"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["wlc"]
exclude = ["docs", "ymls"]